bevezettem 2 classot a rendelések fontosabb infóiról, most már az orderek közül kiválasztott rendelés adatait jeleníti csak meg a datagridview-ban

--- a/ApiSample/ApiSample.csproj
+++ b/ApiSample/ApiSample.csproj
@@ -58,6 +58,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rendeles.cs" />
+    <Compile Include="rendeles2.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApiSample.htm" />
